clusters/folly/monitoring/picow.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: picow
  namespace: monitoring
  labels:
    kubernetes.io/service-name: picow
    lolwtf.ca/service: picow
addressType: IPv4
ports:
  - name: http-metrics
    port: 8080
    protocol: TCP
endpoints:
  - addresses: ["10.2.0.216"]
    nodeName: picow
--- # trivy:ignore:avd-ksv-0108
apiVersion: v1
kind: Service
metadata:
  name: picow
  namespace: monitoring
  labels:
    lolwtf.ca/service: picow
    jobLabel: picow
spec:
  ports:
    - name: http-metrics
      port: 8080
      protocol: TCP
      targetPort: 8080
